--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation "com.orhanobut:hawk:2.0.1"
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.karumi:dexter:6.0.1'
+
 }
