--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ui.activityMain.ActivityMain"
-            android:screenOrientation="portrait"
-            >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,7 +20,9 @@
         </activity>
         <activity
             android:name=".ui.authentication.ActivityAuth"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activityOrder.ActivityOrder"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
